[package]
name = "rust_web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
structopt = "0.3.21"
exitfailure = "0.5.1"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tokio-postgres = "0.7"
